2005-01-31  Daniel Jacobowitz  <dan@codesourcery.com>

	2004-09-22  Mark Mitchell  <mark@codesourcery.com>
	* gcc/dwarf2out.c (scope_die_for): If the containing scope is a
	TRANSLATION_UNIT_DECL, consider it to be a global.

2005-01-29  Alan Modra  <amodra@bigpond.net.au>

	* unwind-dw2.c (execute_stack_op): Add missing cases for
	DW_OP_shl, DW_OP_shr, DW_OP_shra, DW_OP_xor.

2005-01-28  Stephane Carrez  <stcarrez@nerim.fr>

	PR target/15384
	* config/m68hc11/t-m68hc11-gas (dp-bit.c): Fix typo causing a
	configuration part of dp-bit.c to be lost.

2005-01-27  Ulrich Weigand  <uweigand@de.ibm.com>

	PR target/17771
	Backport from mainline:
	* config/s390/s390.md ("reload_outti"): Remove predicate for
	output operand.  Abort if operand is not a MEM.
	("reload_outdi", "reload_outdf"): Likewise.

2005-01-27  Marek Michalkiewicz  <marekm@amelek.gda.pl>

	PR target/19293
	PR target/19329
	* config/avr/avr.c (notice_update_cc): Only set condition code for
	ashrqi3 if shift count > 0.
	(out_shift_with_cnt): Handle shift count <= 0 as a no-op.
	(ashlqi3_out, ashlhi3_out, ashlsi3_out, ashrqi3_out, ashrhi3_out,
	ashrsi3_out, lshrqi3_out, lshrhi3_out, lshrsi3_out): Handle shift
	count <= 0 as a no-op, and shift count >= width by copying zero
	or sign bit to all bits of the result.
	* config/avr/avr.md (all shifts): Add alternatives for zero shift
	count, with attribute "length" set to 0 and "cc" set to "none".

2005-01-27  J"orn Rennecke <joern.rennecke@st.com>

	* real.c (do_add): Initialize signalling and canonical members.

	* real.c (real_from_integer): Zero out destination.

2005-01-26  Ulrich Weigand  <uweigand@de.ibm.com>

	Backport from mainline:
	* dbxout.c (dbxout_symbol_location): Resolve constant pool references
	even for variables with NULL DECL_INITIAL.

2005-01-25  Richard Earnshaw  <rearnsha@arm.com>

	PR target/19393
	Backport:
	2004-03-30  Nick Clifton  <nickc@redhat.com>
	* config/arm/arm.md (thumb_jump): Reduce the backward branch